tests/characterization/snapshots/characterization__legacy_metadata_keys__read_only_by_backend_versions.snap
---
source: tests/characterization/main.rs
expression: "render_observation(&context, &output, &[\".metadata\"])"
---
exit: 0
--- stdout ---
engine:
  v2.0.0
* v1.2.3
--- stderr ---
--- filesystem ---
.metadata
--- selected files ---
--- .metadata ---
template=backend
install_root=<TEST_ROOT>/xdg-data/oqtopus/backend/releases
env_name=demo
env_root=<TEST_ROOT>/work
created_at=2031-12-13T14:15:16Z
engine_version=v1.2.3
--- end ---
